grid opgezet voor mobiel en desktop, desktopvieuw werk niet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Les 3 - Opdracht CSS Grid</title>
 </head>
 <body>
-
+<article class="container">
+    <p class="item" id="item-a">A</p>
+    <p class="item" id="item-b">B: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem harum neque officia quam ratione. Doloremque exercitationem fugit itaque nulla recusandae rem, repudiandae veritatis voluptates. Accusamus ad dolore dolorum eius exercitationem, obcaecati officia officiis omnis rem repellat repellendus sapiente vel veritatis! Aperiam neque quaerat quam quisquam voluptatum? Aperiam blanditiis cupiditate dolor dolore dolorum eaque eligendi enim est eveniet harum hic ipsum laudantium maiores minus nihil nobis non pariatur perspiciatis provident, quam quibusdam quos ratione rem temporibus tenetur velit voluptatibus? Ad adipisci alias amet aperiam aspernatur culpa cumque debitis deserunt doloribus error, eveniet excepturi fugit hic illum incidunt iste laudantium nemo nobis numquam praesentium provident, quasi quia quis reprehenderit sapiente similique sint? Ad aliquam architecto at consectetur cumque delectus dolor dolores ea error eum exercitationem fugit id iste labore libero maiores neque nisi nobis officia omnis perferendis perspiciatis possimus provident quae quasi qui quidem rem reprehenderit rerum sequi, sint ullam vel veniam!</p>
+    <p class="item" id="item-c">C</p>
+    <p class="item" id="item-d">D</p>
+    <p class="item" id="item-e">E</p>
+    <p class="item" id="item-f">F</p>
+</article>
 </body>
 </html>
